Implemented main data collection endpoints
